k8s/base/network-policies/api-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-policy
  namespace: ticket-app

spec:
  podSelector:
    matchLabels:
      app: api
  
  policyTypes:
    - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
      - protocol: TCP
        port: 8080
