k8s/base/network-policies/postgres-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policy
  namespace: ticket-app

spec:
  podSelector:
    matchLabels:
      app: postgres
  
  policyTypes:
    - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api
    - podSelector:
        matchLabels:
          app: db-migration
    ports:
      - protocol: TCP
        port: 5432
