k8s/base/network-policies/redis-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-policy
  namespace: ticket-app

spec:
  podSelector:
    matchLabels:
      app: redis
  
  policyTypes:
    - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    - podSelector:
        matchLabels:
          app: api
    ports:
      - protocol: TCP
        port: 6379
